[gd_scene load_steps=12 format=3 uid="uid://bspombtyhjd6a"]

[ext_resource type="Script" uid="uid://cgpjpvw4sqd03" path="res://scenes/minigameScenes/shootingRange/shooting_range.gd" id="1_baoc8"]
[ext_resource type="PackedScene" uid="uid://7ir04oxgkcfm" path="res://scenes/interactables/overworld_bb_gun.tscn" id="2_0amp2"]
[ext_resource type="Material" uid="uid://clqt35auoyxcu" path="res://assets/materials/wood.tres" id="2_v74r3"]
[ext_resource type="PackedScene" uid="uid://biwmiy3eim7u1" path="res://scenes/minigameScenes/shootingRange/target.tscn" id="3_t1gs1"]
[ext_resource type="PackedScene" uid="uid://b6vy8jlfjmg4k" path="res://scenes/interactables/overworld_token.tscn" id="5_oadsy"]
[ext_resource type="Material" uid="uid://b6qi4exs5o46m" path="res://assets/materials/arcadewall3.tres" id="7_s1lab"]
[ext_resource type="Material" uid="uid://5o4c42nxr5a8" path="res://assets/materials/shootingrangefloor.tres" id="8_s1lab"]
[ext_resource type="Texture2D" uid="uid://u22f0nycncs8" path="res://assets/Textures/ArcadeCeiling.png" id="9_xxta3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_t1gs1"]
size = Vector3(37.6171, 12.1945, 28.0642)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rnhrr"]
albedo_texture = ExtResource("9_xxta3")
uv1_triplanar = true
texture_filter = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_5mf57"]
size = Vector3(1.26282, 2.41858, 2.0351)

[node name="shootingRange" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.5689, 0, 0)
script = ExtResource("1_baoc8")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.61365, 3.92505, -8.06494)
visible = false
use_collision = true
size = Vector3(26.5408, 8.8501, 17.1299)

[node name="CSGBox3D" type="CSGBox3D" parent="CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.13826, 0.509216, -0.00703239)
visible = false
operation = 2
size = Vector3(39.2916, 7.40955, 16.3457)

[node name="CSGBox3D8" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.61365, 3.92505, -8.06494)
visible = false
use_collision = true
size = Vector3(26.5408, 8.8501, 17.1299)

[node name="CSGBox3D" type="CSGBox3D" parent="CSGBox3D8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.13826, 0.509216, -0.00703239)
visible = false
operation = 2
size = Vector3(39.2916, 7.40955, 16.3457)

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 52.6163, 1.24515, 5.12006)
use_collision = true
size = Vector3(1, 1.01831, 10.9268)
material = ExtResource("2_v74r3")

[node name="overworldBBGun" parent="." instance=ExtResource("2_0amp2")]
transform = Transform3D(0.0726627, 0.00546291, 0.997342, -0.000396946, 0.999985, -0.00544832, -0.997357, 0, 0.0726638, 52.7138, 1.59677, 4.73042)

[node name="targets" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.9089, 0.602802, -9.91666)

[node name="Target" parent="targets" instance=ExtResource("3_t1gs1")]
transform = Transform3D(-0.0494947, 0, 0.998774, 0, 1, 0, -0.998774, 0, -0.0494947, 47.7493, 0, 5.69972)
targetLevel = 3

[node name="Target2" parent="targets" instance=ExtResource("3_t1gs1")]
transform = Transform3D(-0.0494947, 0, 0.998774, 0, 1, 0, -0.998774, 0, -0.0494947, 47.7493, 0, 19.0125)
targetLevel = 3

[node name="Target3" parent="targets" instance=ExtResource("3_t1gs1")]
transform = Transform3D(-0.0494947, 0, 0.998774, 0, 1, 0, -0.998774, 0, -0.0494947, 58.238, 0, 5.69972)

[node name="Target4" parent="targets" instance=ExtResource("3_t1gs1")]
transform = Transform3D(-0.0494947, 0, 0.998774, 0, 1, 0, -0.998774, 0, -0.0494947, 58.238, 0, 19.0125)

[node name="Target5" parent="targets" instance=ExtResource("3_t1gs1")]
transform = Transform3D(-0.0494947, 0, 0.998774, 0, 1, 0, -0.998774, 0, -0.0494947, 53.8667, 0, 9.44629)
targetLevel = 2

[node name="Target6" parent="targets" instance=ExtResource("3_t1gs1")]
transform = Transform3D(-0.0494947, 0, 0.998774, 0, 1, 0, -0.998774, 0, -0.0494947, 53.8667, 0, 16.4058)
targetLevel = 2

[node name="shootingRangeArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="shootingRangeArea"]
transform = Transform3D(0.999952, -0.00977369, 0, 0.00977369, 0.999952, 0, 0, 0, 1, 38.656, 5.59723, -0.0705996)
shape = SubResource("BoxShape3D_t1gs1")

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.0572, 3.92017, 10.7533)
material_override = ExtResource("7_s1lab")
size = Vector3(26.4781, 8.84033, 0.439575)

[node name="CSGBox3D4" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.0572, 3.92017, -6.00795)
material_override = ExtResource("7_s1lab")
size = Vector3(26.4781, 8.84033, 0.439575)

[node name="CSGBox3D6" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 28.1837, 4.08946, 2.38969)
material_override = ExtResource("7_s1lab")
size = Vector3(2.73111, 16.6346, 8.5769)

[node name="CSGBox3D7" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.0606, 8.26286, 2.16091)
material_override = SubResource("StandardMaterial3D_rnhrr")
size = Vector3(26.4849, 0.163681, 16.7773)

[node name="overworldToken" parent="." instance=ExtResource("5_oadsy")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 30.3335, 5.22147, 6.50658)
tokenString = "tower"

[node name="shootingRangeTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="CSGBox3D9" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 38.0941, 0.132782, 0)
material_override = ExtResource("8_s1lab")
use_collision = true
size = Vector3(30.656, 1.168, 22.768)

[node name="barrier" type="Node3D" parent="."]

[node name="barrier" type="CSGBox3D" parent="barrier"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 54.5154, 1.06914, 2.22031)
visible = false
material_override = ExtResource("2_v74r3")
size = Vector3(4.80575, 1, 20.0531)

[node name="CSGBox3D5" type="CSGBox3D" parent="barrier/barrier"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.201723, -0.426804, 0.0377417)
operation = 2
use_collision = true
size = Vector3(3.06212, 2.10547, 17.0703)

[node name="CSGBox3D5" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 52.6182, 1.28012, 0.210599)
size = Vector3(1, 3.56024, 1)

[node name="gameBooth" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 54.5762, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="gameBooth"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.226221, 2.08969, -0.0143099)
shape = SubResource("BoxShape3D_5mf57")

[node name="lights" type="Node3D" parent="."]

[node name="SpotLight3D" type="SpotLight3D" parent="lights"]
transform = Transform3D(0.566981, -0.190121, 0.801491, 0.0406329, 0.978271, 0.203311, -0.822728, -0.0827064, 0.562386, 53.5998, 6.3778, 9.86412)
light_energy = 4.0
spot_range = 36.8603
spot_angle = 20.1224

[node name="SpotLight3D2" type="SpotLight3D" parent="lights"]
transform = Transform3D(-0.562044, -0.145856, 0.814145, 0.0406328, 0.978271, 0.203311, -0.826109, 0.14735, -0.543905, 53.9333, 6.3778, -4.94109)
light_energy = 4.0
spot_range = 36.8603
spot_angle = 20.1224

[connection signal="body_entered" from="shootingRangeArea" to="." method="_on_shooting_range_area_body_entered"]
[connection signal="body_exited" from="shootingRangeArea" to="." method="_on_shooting_range_area_body_exited"]
[connection signal="timeout" from="shootingRangeTimer" to="." method="_on_shooting_range_timer_timeout"]
[connection signal="body_entered" from="gameBooth" to="." method="_on_game_booth_body_entered"]
[connection signal="body_exited" from="gameBooth" to="." method="_on_game_booth_body_exited"]
